[package]
name = "flek"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Abraham <youreccentricity@outlook.com>"]
description= "A Rustacean implementation of my own algorithms to check for password security."
homepage = "https://github.com/iamtheblackunicorn/flek"
repository = "https://github.com/iamtheblackunicorn/flek"
documentation = "https://github.com/iamtheblackunicorn/flek"
readme = "README.markdown"
keywords = [
  "security"
]
categories = [
  "security"
]
exclude = [
  "/.github"
]

[dependencies]
rand = "0.8.5"